# MrEngine

./: .gitconfig  CMakeLists.txt  README.md  gen_build_win_x86.bat
scripts/: Engine.h  gen_android_sdk.bat  gen_vs19_proj.bat  genie  genie.lua  toolchain.lua  utils.lua
src/MrEngine/App/: App.cpp  AppImplementGLTF.h  AppInclude.h
src/MrEngine/App/Platform/android/: build.gradle  copy_assets.py
src/MrEngine/App/Platform/android/app/: build.gradle
src/MrEngine/App/Platform/ios/: AppDelegate.h  AppDelegate.m  HomeViewController.h  HomeViewController.m  Main.m  ViewController.h  ViewController.m  ViewController.mm
src/MrEngine/App/Platform/ios/app/: Info.plist
src/MrEngine/App/Platform/mac/: AppDelegate.h  AppDelegate.m  Main.m  ViewController.h  ViewController.mm  VkView.h  VkView.mm
src/MrEngine/App/Platform/win/: Main.cpp
src/MrEngine/Dep/SPIRV-Cross/: main.cpp
src/MrEngine/Dep/glslang/: removegit.bat
src/MrEngine/Dep/glslang/StandAlone/: StandAlone.cpp  spirv-remap.cpp
src/MrEngine/Dep/hlslcc_lib/: CMakeLists.txt  HlslccDefinitions.h  IRDump.cpp  IRDump.h  LanguageSpec.h  OptValueNumbering.cpp  OptValueNumbering.h  PackUniformBuffers.cpp  PackUniformBuffers.h  ShaderCompilerCommon.cpp  ShaderCompilerCommon.h  ast.h  ast_expr.cpp  ast_function.cpp  ast_to_hir.cpp  ast_type.cpp  builtin_stubs.cpp  builtin_types.h  cclist.h  compiler.h  glcpp-lex.cpp  glcpp-lex.inl  glcpp-lex.l  glcpp-parse.cpp  glcpp-parse.inl  glcpp-parse.y  glcpp.h  glsl_parser_extras.cpp  glsl_parser_extras.h  glsl_symbol_table.cpp  glsl_symbol_table.h  glsl_types.cpp  glsl_types.h  hash_table.cpp  hash_table.h  hir_field_selection.cpp  hlsl_lexer.cpp  hlsl_lexer.inl  hlsl_lexer.ll  hlsl_parser.cpp  (+79 more)
src/MrEngine/Dep/libzip/include/: config.h
src/MrEngine/Dep/lua/: lapi.cpp  lauxlib.cpp  lauxlib.h  lbaselib.cpp  lbitlib.cpp  lcode.cpp  lcode.h  lcorolib.cpp  lctype.cpp  lctype.h  ldblib.cpp  ldebug.cpp  ldebug.h  ldo.cpp  ldo.h  ldump.cpp  lfs.cpp  lfs.h  lfunc.cpp  lfunc.h  lgc.cpp  lgc.h  linit.cpp  liolib.cpp  llex.cpp  llex.h  llimits.h  lmathlib.cpp  lmem.cpp  lmem.h  loadlib.cpp  lobject.cpp  lobject.h  lopcodes.cpp  lopcodes.h  loslib.cpp  lparser.cpp  lparser.h  lstate.cpp  lstate.h  (+22 more)
src/MrEngine/Dep/mcpp-2.7.2/: CMakeLists.txt  configure  mcpp.vcxproj  mcpp.vcxproj.filters
src/MrEngine/Dep/mcpp-2.7.2/lib/Win32/VS2015/: mcpp.lib  mcpp_d.lib
src/MrEngine/Dep/mcpp-2.7.2/lib/Win64/VS2015/: mcpp_64.lib  mcpp_64d.lib
src/MrEngine/Dep/shader-Converter/: shader_converter.cpp  shader_converter.h
src/MrEngine/Dep/shader-Converter/SPIRV-Cross/: main.cpp  spirv_parser.cpp
src/MrEngine/Dep/shader-Converter/glslang/StandAlone/: StandAlone.cpp
src/MrEngine/Dep/zipper/zipper/: tools.cpp
src/MrEngine/Dep/zlib/: zutil.h
src/MrEngine/Dep/zlib/wrapper/: Makefile  crypt.h  ioapi.cpp  ioapi.h  iowin32.h  mztools.cpp  mztools.h  unzip.cpp  unzip.h  unzipper.cpp  unzipper.h  zip.cpp  zip.h  zipper.cpp  zipper.h
src/MrEngine/Engine/: Action.h  App.h  Camera.h  Component.cpp  Component.h  Debug.cpp  Debug.h  Editor.cpp  Editor.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  FileSystem.cpp  FileSystem.h  Input.cpp  Input.h  KeyCode.h  Object.cpp  Object.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Shader.cpp  Shader.h  Transform.cpp  Transform.h  WorldManager.cpp  WorldManager.h  cube.cpp  cube.h  gltfview.cpp  gltfview.h  object_id_allocator.cpp  object_id_allocator.h  triangle.cpp  triangle.h
src/MrEngine/Engine/android/: jni.h
src/MrEngine/Engine/animation/: Animation.cpp  Animation.h  AnimationCurve.cpp  AnimationCurve.h
src/MrEngine/Engine/audio/: AudioClip.cpp  AudioClip.h  AudioListener.cpp  AudioListener.h  AudioManager.cpp  AudioManager.h  AudioSource.cpp  AudioSource.h
src/MrEngine/Engine/core/meta/: meta_example.cpp  meta_example.h
src/MrEngine/Engine/core/meta/reflection/: reflection.cpp  (+3 more)
src/MrEngine/Engine/graphics/: Camera.cpp  Camera.h  CameraClearFlags.h  Color.cpp  Color.h  Image.cpp  Image.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  SkinnedMeshRenderer.cpp  SkinnedMeshRenderer.h  Texture.cpp  Texture.h
src/MrEngine/Engine/graphics/sprivShader/: spirv_shader.cpp  spirv_shader.h
src/MrEngine/Engine/io/: Directory.cpp  Directory.h  File.cpp  File.h  FileSystem.cpp  MemoryStream.cpp  MemoryStream.h  Stream.cpp  Stream.h
src/MrEngine/Engine/math/: Bounds.cpp  Bounds.h  Frustum.cpp  Frustum.h  Mathf.cpp  Mathf.h  Matrix4x4.cpp  Matrix4x4.h  Quaternion.cpp  Quaternion.h  Ray.cpp  Ray.h  Rect.cpp  Rect.h  Recti.cpp  Recti.h  Vector2.cpp  Vector2.h  Vector2i.h  Vector3.cpp  Vector3.h  Vector4.h
src/MrEngine/Engine/memory/: ByteBuffer.cpp  ByteBuffer.h  Memory.cpp  Memory.h  Ref.h
src/MrEngine/Engine/postprocessing/: PostProcessing.cpp  PostProcessing.h
src/MrEngine/Engine/string/: Utils.cpp  stringutils.cpp  stringutils.h
src/MrEngine/Engine/thread/: ThreadPool.cpp  ThreadPool.h
src/MrEngine/Engine/time/: Time.cpp  Time.h
src/MrEngine/Engine/ui/: ImGuiRenderer.cpp  ImGuiRenderer.h
src/MrEngine/Tools/CompilerShader/: ByteArrayEncoder.h  CommAttri.h  ComplierParam.cpp  ComplierParam.h  ComplierState.cpp  ComplierState.h  MacroEnumer.cpp  MacroEnumer.h  Macros.cpp  Macros.h  Shaderpack.cpp  Shaderpack.h  Utils.h  luaCodes.cpp  main.cpp
src/MrEngine/Tools/CompilerShader/glsl/: GLSLCompiler.cpp  GLSLCompiler.h  GlslBackend.cpp  GlslBackend.h  ShaderPreprocessor.cpp  ShaderPreprocessor.h
src/MrEngine/Tools/CompilerShader/hlsl/: hlslCompiler.cpp  hlslCompiler.h
src/MrEngine/Tools/meta_parser/: CMakeLists.txt
src/MrEngine/precompile/: precompile.cmake  precompile.json.in
src/MrEngine/template/: allReflectionFile.mustache  allSerializer.h.mustache  allSerializer.ipp.mustache  commonReflectionFile.mustache  commonSerializerGenFile.mustache
vs2019/: MrApp.vcxproj  MrApp.vcxproj.filters  MrEngine.sln  MrEngine.vcxproj  MrEngine.vcxproj.filters  MrEngineDep.vcxproj  MrEngineDep.vcxproj.filters
(+61 files in other folders)
